--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,18 +4,13 @@ server:
 
 spring:
   datasource:
-#    type: com.alibaba.druid.pool.DruidDataSource
-#    driver-class-name: oracle.jdbc.driver.OracleDriver
-#    url: jdbc:oracle:thin:@localhost:1521:orcl
-#    username: storetest
-#    password: 123456
+#    Orcale9之后就将oracle.jdbc.driver.OracleDriver改为oracle.jdbc.OracleDriver
     druid:
-      # 数据库访问配置, 使用druid数据源
-      db-type: com.alibaba.druid.pool.DruidDataSource
       driver-class-name: oracle.jdbc.OracleDriver
-      url: jdbc:oracle:thin:@localhost:1521:ORCL
+      url: jdbc:oracle:thin:@localhost:1521:XE
       username: storetest
       password: 123456
+      db-type: com.alibaba.druid.pool.DruidDataSource
       # 连接池配置
       initial-size: 5
       min-idle: 5
@@ -35,38 +30,36 @@ spring:
       max-open-prepared-statements: 20
       max-pool-prepared-statement-per-connection-size: 20
       # 配置监控统计拦截的filters, 去掉后监控界面sql无法统计, 'wall'用于防火墙
-      filters: stat,wall
+#      filters: stat,wall
       # Spring监控AOP切入点，如x.y.z.service.*,配置多个英文逗号分隔
       aop-patterns: com.springboot.servie.*
-
       # WebStatFilter配置
       web-stat-filter:
         enabled: true
         # 添加过滤规则
         url-pattern: /*
         # 忽略过滤的格式
-        exclusions: /druid/*
+        exclusions: '*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*'
 
-        # StatViewServlet配置
+      # StatViewServlet配置
       stat-view-servlet:
         enabled: true
         # 访问路径为/druid时，跳转到StatViewServlet
         url-pattern: /druid/*
-        # 需要账号密码才能访问控制台
+        # 是否能够重置数据
         reset-enable: false
-        # 配置登录的账号密码
+        # 需要账号密码才能访问控制台
         login-username: druid
         login-password: druid123
         # IP白名单
         # allow: 127.0.0.1
-        #IP黑名单（共同存在时，deny优先于allow）
+        #　IP黑名单（共同存在时，deny优先于allow）
         # deny: 192.168.1.218
 
       # 配置StatFilter
       filter:
         stat:
           log-slow-sql: true
-
 
 mybatis:
   # type-aliases扫描路径
