--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,23 @@ spring:
   datasource:
 #    Orcale9之后就将oracle.jdbc.driver.OracleDriver改为oracle.jdbc.OracleDriver
     druid:
-      driver-class-name: oracle.jdbc.OracleDriver
-      url: jdbc:oracle:thin:@localhost:1521:XE
-      username: storetest
-      password: 123456
-      db-type: com.alibaba.druid.pool.DruidDataSource
+      oracle:
+        driver-class-name: oracle.jdbc.OracleDriver
+        url: jdbc:oracle:thin:@localhost:1521:XE
+        username: storetest
+        password: 123456
+        db-type: com.alibaba.druid.pool.DruidDataSource
+      mysql:
+        driver-class-name: com.mysql.jdbc.Driver
+        url: jdbc:mysql://localhost:3306/cmdb
+        username: root
+        password: 123456
+        db-type: com.alibaba.druid.pool.DruidDataSource
+#      driver-class-name: oracle.jdbc.OracleDriver
+#      url: jdbc:oracle:thin:@localhost:1521:XE
+#      username: storetest
+#      password: 123456
+#      db-type: com.alibaba.druid.pool.DruidDataSource
       # 连接池配置
       initial-size: 5
       min-idle: 5
@@ -60,6 +72,7 @@ spring:
       filter:
         stat:
           log-slow-sql: true
+
 
 mybatis:
   # type-aliases扫描路径
